[gd_scene load_steps=15 format=2]

[ext_resource path="res://World/World.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Background/BG City.jpg" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Interface/Pointer.gd" type="Script" id=4]
[ext_resource path="res://Props/Dumpster.gd" type="Script" id=5]
[ext_resource path="res://Props/outline effect.shader" type="Shader" id=6]
[ext_resource path="res://Sprites/dumpster.png" type="Texture" id=7]
[ext_resource path="res://Props/IconEffect.gd" type="Script" id=8]
[ext_resource path="res://Props/Things/Jabberwocky.tscn" type="PackedScene" id=9]

[sub_resource type="PhysicsMaterial" id=1]


[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 1107.3, 82.56 )

[sub_resource type="CircleShape2D" id=3]

radius = 2.67089

[sub_resource type="ShaderMaterial" id=4]

resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/intensity = 0
shader_param/precision = 0.02
shader_param/outline_color = Color( 1, 1, 1, 0 )

[sub_resource type="ParticlesMaterial" id=5]

flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
angular_velocity = 1.05
orbit_velocity = 0.0
orbit_velocity_random = 0.0
hue_variation = 1.0

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="BG City" type="TextureRect" parent="."]
margin_right = 2467.0
margin_bottom = 1080.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_lock_": true
}

[node name="BG City2" type="TextureRect" parent="BG City"]
margin_left = 1570.0
margin_right = 4037.0
margin_bottom = 1080.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="AlleyFloor" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 586.658, 764.718 )
physics_material_override = SubResource( 1 )

[node name="icon" type="Sprite" parent="AlleyFloor"]
visible = false
position = Vector2( 2.38001, 0 )
scale = Vector2( 8.51191, 1 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlleyFloor"]
position = Vector2( 344.458, -45.1119 )
shape = SubResource( 2 )

[node name="Pointer" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pointer"]
shape = SubResource( 3 )

[node name="Objects" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Dumpster" type="RigidBody2D" parent="Objects"]
position = Vector2( 320.835, 481.464 )
collision_layer = 2
collision_mask = 2
mode = 1
custom_integrator = true
continuous_cd = 1
contacts_reported = 5
contact_monitor = true
can_sleep = false
script = ExtResource( 5 )

[node name="next_trash" type="Timer" parent="Objects/Dumpster"]
wait_time = 10.0
autostart = true

[node name="spawn_pos" type="Position2D" parent="Objects/Dumpster"]
position = Vector2( -16.4003, -190.694 )

[node name="icon" type="Sprite" parent="Objects/Dumpster"]
material = SubResource( 4 )
position = Vector2( -83.0544, 8.59186 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Objects/Dumpster"]
polygon = PoolVector2Array( -100.946, 35.0902, 12.19, 37.4229, 38.3085, 24.3298, 74.4514, 6.21161, 75.5594, 140.284, 20.1578, 156.904, -247.986, 165.768, -243.554, 37.2365, -189.589, 30.4248 )

[node name="Area2D" type="Area2D" parent="Objects/Dumpster"]
editor/display_folded = true
collision_layer = 5
collision_mask = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Objects/Dumpster/Area2D"]
polygon = PoolVector2Array( -167.428, -18.562, 71.674, -24.3938, 70.5076, 3.59869, 37.8498, 66.5817, -245.574, 57.2509, -245.574, 33.9238 )
one_way_collision = true

[node name="SmokeEffect" type="Particles2D" parent="Objects/Dumpster"]
position = Vector2( -64.7718, 3.70129 )
rotation = -1.58195
emitting = false
lifetime = 5.0
one_shot = true
speed_scale = 3.5
explosiveness = 1.0
randomness = 0.5
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="Jabberwocky" parent="Objects" instance=ExtResource( 9 )]
position = Vector2( 1223.46, 143.026 )
collision_layer = 4
collision_mask = 4
physics_enabled = false

[node name="Jabberwocky2" parent="Objects" instance=ExtResource( 9 )]
position = Vector2( 1105.14, 310.555 )

[node name="Jabberwocky3" parent="Objects" instance=ExtResource( 9 )]
position = Vector2( 519.813, 379.146 )

[node name="Jabberwocky4" parent="Objects" instance=ExtResource( 9 )]
position = Vector2( 924.079, 342.852 )

[node name="Jabberwocky5" parent="Objects" instance=ExtResource( 9 )]
position = Vector2( 852.002, 190.906 )

[node name="Jabberwocky6" parent="Objects" instance=ExtResource( 9 )]
position = Vector2( 717.691, 301.43 )

[connection signal="area_entered" from="Pointer" to="Pointer" method="_on_hover_start"]
[connection signal="area_exited" from="Pointer" to="Pointer" method="_on_hover_end"]
[connection signal="body_entered" from="Pointer" to="Pointer" method="_on_hover_start"]
[connection signal="body_exited" from="Pointer" to="Pointer" method="_on_hover_end"]
[connection signal="timeout" from="Objects/Dumpster/next_trash" to="Objects/Dumpster" method="_on_next_trash_timeout"]
[connection signal="body_entered" from="Objects/Dumpster/Area2D" to="Objects/Dumpster" method="_on_Area2D_body_entered"]
